tests/resources/errors/errors_destructors4.ac
import std;
import std.Error;

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }
}

struct A {
    int8 v;
    ~A() {
        std.print("deconstructor called!");
    }
}

A foo(bool b) raises TestError {
    if b {
        raise TestError{};
    } else {
        return A{ 64 };
    }
}

void main() {
    try foo(false) {
        return;
    };
    std.print("...");
    try foo(true) {
        std.print("caught error!");
        return;
    };
    std.print("not reached");
}